# Contract-Analysis-demo

./: README.md  pyproject.toml  requirements.txt
data/: contract-supplier-2.txt  supplier-contract-1.txt
src/: frontend.py  main.py
